--- a/xtab.css
+++ b/xtab.css
@@ -4,7 +4,7 @@ table.xtab { border: solid 1px gray; }
 .xtab td { border: dotted 1px gray; }
 .xtab th { border: solid 1px gray; background-color: #E0E0E0; font-weight: normal; text-align: center; vertical-align: middle; padding: 0px 4px; overflow: hidden; }
 .xtab th.current { background-color: #C0C0C0; }
-.xtab input, .xtab select, .xtab textarea { font-size: 10pt; padding: 0px 4px; height: 100%; width: 100px; }
+.xtab input, .xtab select, .xtab textarea { border: none 0px !important; font-size: 10pt; padding: 0px 4px; height: 100%; width: 100px; }
 .xtab input.number { text-align: right; }
 .xtab input.readonly { font-style:italic; background-color: #F7F7F7; }
 .xtab input:focus, .xtab select:focus, .xtab textarea:focus { background: #FFFFE0 !important; }
